Crash snapping to text objects with XRay shading #92466

Closed
opened 2021-10-25 09:20:05 +02:00 by Jaggz H · 6 comments

Operating system: Debian Stable
Graphics card: Nvidia gtx 970

Broken: 3 from 2021-10-12 53af51ad50 master)
Worked: 2.93 seems ok.

Code marked as unreachable has been executed. Please report this as a bug.
(Upon dragging then enabling snap)

#92466.blend

  1. g to drag the selected object
  2. hold ctrl while moving mouse

Read prefs: /home/jaggz/.config/blender/3.0/config/userpref.blend
Read blend: /tmp/foo.blend
Error found at source/blender/blenkernel/intern/mesh_wrapper.c:162 in BKE_mesh_wrapper_minmax.
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(BLI_system_backtrace+0x26) [0x1009e6c3]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(_BLI_assert_print_backtrace+0x16) [0xff6b844]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(BKE_mesh_wrapper_minmax+0x89) [0x39e6b7d]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(BKE_mesh_boundbox_get+0x9d) [0x39c95c6]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x51173db]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x5118574]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x5112ed7]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x51186f2]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x511916a]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(ED_transform_snap_object_project_view3d_ex+0x5a) [0x511931a]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(snapObjectsTransform+0xfd) [0x510fd6e]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x510ee50]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(applySnapping+0xff) [0x510dd58]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x50fe2cd]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(transformApply+0x83) [0x509176c]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x51046d4]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x3f9c79f]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x3f9ef13]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x3f9f065]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(wm_event_do_handlers+0x754) [0x3fa0581]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(WM_main+0x30) [0x3f934c7]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x392393e]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xea) [0x7f1bb00d3d0a]
/home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(_start+0x2a) [0x392334a]
BLI_assert failed: source/blender/blenkernel/intern/mesh_wrapper.c:162, BKE_mesh_wrapper_minmax(), at '0'

This line of code is marked to be unreachable.

foo.blend

Operating system: Debian Stable Graphics card: Nvidia gtx 970 Broken: 3 from 2021-10-12 53af51ad50ec master) Worked: 2.93 seems ok. Code marked as unreachable has been executed. Please report this as a bug. (Upon dragging then enabling snap) [#92466.blend](https://archive.blender.org/developer/F11485184/T92466.blend) 1. g to drag the selected object 2. hold ctrl while moving mouse Read prefs: /home/jaggz/.config/blender/3.0/config/userpref.blend Read blend: /tmp/foo.blend Error found at source/blender/blenkernel/intern/mesh_wrapper.c:162 in BKE_mesh_wrapper_minmax. /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(BLI_system_backtrace+0x26) [0x1009e6c3] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(_BLI_assert_print_backtrace+0x16) [0xff6b844] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(BKE_mesh_wrapper_minmax+0x89) [0x39e6b7d] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(BKE_mesh_boundbox_get+0x9d) [0x39c95c6] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x51173db] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x5118574] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x5112ed7] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x51186f2] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x511916a] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(ED_transform_snap_object_project_view3d_ex+0x5a) [0x511931a] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(snapObjectsTransform+0xfd) [0x510fd6e] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x510ee50] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(applySnapping+0xff) [0x510dd58] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x50fe2cd] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(transformApply+0x83) [0x509176c] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x51046d4] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x3f9c79f] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x3f9ef13] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x3f9f065] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(wm_event_do_handlers+0x754) [0x3fa0581] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(WM_main+0x30) [0x3f934c7] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender() [0x392393e] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xea) [0x7f1bb00d3d0a] /home/jaggz/bl-src/blender-git/build_linux_debug/bin/blender(_start+0x2a) [0x392334a] BLI_assert failed: source/blender/blenkernel/intern/mesh_wrapper.c:162, BKE_mesh_wrapper_minmax(), at '0' ``` This line of code is marked to be unreachable. ``` [foo.blend](https://archive.blender.org/developer/F11484258/foo.blend)
Author

Added subscriber: @jaggz

Added subscriber: @jaggz
Philipp Oeser changed title from Crash upon snap to Crash snapping to text objects with XRay shading 2021-10-25 09:57:06 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

@mano-wii : can you look into this?

@mano-wii : can you look into this?

This issue was referenced by 1bc28fc73b

This issue was referenced by 1bc28fc73b9cf6ffa873c6fb0d2f6c3e9e7aaf2b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-10-25 16:27:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92466
No description provided.