Fix T92466: Crash snapping to text objects with XRay shading

Should have been addressed along with {rB6cff1d648030}